# Backend

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  infoMicrosoft
.github/workflows/: develop_LocalEatBackend.yml  main.yml
backend/: Dockerfile
backend/src/: main.rs
src/: main.rs
src/api/: product_api.rs  user_api.rs
src/models/: location_models.rs  mod.rs  product_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
